Fixed the alignment of the Blog text

--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,18 +1,23 @@
 .container {
-    display: flex;
-    gap: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-  .img {
-    object-fit: cover;
-  }
-  
-  .title {
-    font-size: 50px;
-  }
-  
-  .desc {
-    font-size: 20px;
-  }
-  
+  display: flex;
+  gap: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.img {
+  object-fit: cover;
+}
+
+.title {
+  font-size: 30px;
+}
+
+.desc {
+  font-size: 20px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
